Add score above board

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
+    <div class="score">Score: </div>
+    <div id='x' class='score'></div>
+    <div id='o' class='score'></div>
+    <br><br>
     <table>
       <tr>
         <td id="0"></td>
