Change class score to class row

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
-    <div class="score">Score: </div>
-    <div id='x' class='score'></div>
-    <div id='o' class='score'></div>
+    <div class="row">Score: </div>
+    <div id='x' class='row'></div>
+    <div id='o' class='row'></div>
     <br><br>
     <table>
       <tr>
