--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
-    <div class="row">Score: </div>
-    <div id='x' class='row'></div>
-    <div id='o' class='row'></div>
-    <br><br>
+    <div id="round"></div>
+    <div class="row">Score:</div>
+    <div id="x" class="row"></div>
+    <div id="o" class="row"></div>
+    <br /><br />
     <table>
       <tr>
         <td id="0"></td>
