Add click functionality for playing a square

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <br /><br />
     <table>
       <tr>
-        <td id="0"></td>
-        <td id="1"></td>
-        <td id="2"></td>
+        <td id="0" onclick="board.setState(this.id)"></td>
+        <td id="1" onclick="board.setState(this.id)"></td>
+        <td id="2" onclick="board.setState(this.id)"></td>
       </tr>
       <tr>
-        <td id="3"></td>
-        <td id="4"></td>
-        <td id="5"></td>
+        <td id="3" onclick="board.setState(this.id)"></td>
+        <td id="4" onclick="board.setState(this.id)"></td>
+        <td id="5" onclick="board.setState(this.id)"></td>
       </tr>
       <tr>
-        <td id="6"></td>
-        <td id="7"></td>
-        <td id="8"></td>
+        <td id="6" onclick="board.setState(this.id)"></td>
+        <td id="7" onclick="board.setState(this.id)"></td>
+        <td id="8" onclick="board.setState(this.id)"></td>
       </tr>
     </table>
     <script src="script.js"></script>
