Track current round and score above game board

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
-    <div id="round"></div>
-    <div class="row">Score:</div>
-    <div id="x" class="row"></div>
-    <div id="o" class="row"></div>
+    <div class="row">Round: 
+      <div class="row" id="round"></div>
+    </div>
+    <div class="row">Score: 
+      <div class="row" id="player1"></div>
+      <div class="row" id="player2"></div>
+    </div>
     <br /><br />
     <table>
       <tr>
