Add player colors, and announce result on the page

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
-    <div class="row">Round: 
+    <div class="row" id="result"></div>
+    <br /><br />
+    <div>Round: 
       <div class="row" id="round"></div>
     </div>
+    <br />
     <div class="row">Score: 
-      <div class="row" id="player1"></div>
-      <div class="row" id="player2"></div>
+      <div class="row" id="playerOneScore"></div>
+      <div class="row" id="playerTwoScore"></div>
     </div>
     <br /><br />
     <table>
