Allow players to change their name by clicking on it

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </div>
     <br />
     <div class="row">Score: 
-      <div class="row" id="playerOneScore"></div>
-      <div class="row" id="playerTwoScore"></div>
+      <div class="row" id="playerOneScore" onclick="player1.setName('Test')"></div>
+      <div class="row" id="playerTwoScore" onclick="player2.setName('Test')"></div>
     </div>
     <br /><br />
     <table>
