Render display using javascript instead of HTML

--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
-    <div class="row" id="result"></div>
+
+    <div id="display"></div>
+
+    <!-- <div class="row" id="result"></div>
     <br /><br />
     <div>Round: 
       <div class="row" id="round"></div>
     </div>
     <br />
     <div class="row">Score: 
-      <div class="row" id="playerOneScore" onclick="player1.setName('Test')"></div>
-      <div class="row" id="playerTwoScore" onclick="player2.setName('Test')"></div>
+      <div class="row" id="playerOneScore" onclick="player1.setName()"></div>
+      <div class="row" id="playerTwoScore" onclick="player2.setName()"></div>
     </div>
-    <br /><br />
+    <br /><br /> -->
+    
     <table>
       <tr>
         <td id="0" onclick="board.setState(this.id)"></td>
